# MechaMatch

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  environment.yml  mypy.ini  run_spiders.py
scraper/: .dockerignore  .gitignore  Dockerfile  README.md  environment.yml  proxy_manager.py  pyproject.toml  requirements.txt  run_spiders.py  scrapy.cfg
scraper/config/: config.py  example_rule.json
scraper/config/scrapy_rules/: gundamit.json  sugotoys.json  vulcanhobby.json
scraper/src/moduscrape/: main.py
scraper/src/moduscrape/config/: config_manager.py  parameters.py
scraper/src/moduscrape/middlewares/: __init__.py
scraper/src/moduscrape/runtime/: registry.py  session_logger.py
scraper/src/moduscrape/scripts/: run_spiders.py
scraper/src/moduscrape/session/: session_logger.py
scraper/src/moduscrape/spiders/: core_spider.py
scraper/src/moduscrape/utils/: settings_manager.py
scraper/src/toy_catalogue/: config_manager.py  config_spec.py  domain_utils.py  items.py  settings.py
scraper/src/toy_catalogue/config/: config_manager.py  (+1 more)
scraper/tests/: conftest.py
scraper/tests/examples/: example_input.json
scraper/tests/test_extractors/: test_css_extractors.py  test_extractors_css.py  test_le_extractors.py
scraper/tests/test_graphs/: test_graph.py
scraper/tests/test_proxies/: test_proxyrotation429.py
scraper/toy_catalogue/: domain_utils.py  items.py  middlewares.py  settings.py
scraper/toy_catalogue/config/: schema.py
scraper/toy_catalogue/proxies/: log_handler.py  proxies.txt  proxy.py  proxy_checker.py  proxy_loader.py  proxy_manager.py  proxy_sourcer.py
scraper/toy_catalogue/spiders/: rule_factory.py  spider_factory.py  strategy_factory.py
scraper/toy_catalogue/utils/: settings_manager.py  url.py
(+171 files in other folders)
