[project]
name = "moduscrape"
version = "0.1.0"
description = "Modular web scraper"
authors = [{ name = "Henry Zhang", email = "hh.zhang520@email.com" }]
requires-python = ">=3.12"
dependencies = [
    "scrapy>=2.12.0",
    "pydantic>=2.0",
    # add other project dependencies here
]

[project.optional-dependencies]
dev = [
    "pytest",
    "mypy", 
    "pre-commit",
    # dev-only dependencies
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"toy_catalogue" = ["py.typed"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

# Optional: CLI entry point
[project.scripts]
run-spiders = "moduscrape.main:app"

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
include = ["src/*"]